<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/que1_text_view"
                style="@style/QuestionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1" />

            <ImageView
                android:id="@+id/que1_image_view"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/que1_text_view"
                android:scaleType="fitCenter"
                android:src="@drawable/lion" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/que1_image_view"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/cat_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cat"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/turtle_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turtle"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/lion_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lion"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/dividerColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/que2_text_view"
                style="@style/QuestionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2" />

            <ImageView
                android:id="@+id/que2_image_view"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/que2_text_view"
                android:scaleType="fitCenter"
                android:src="@drawable/monkey" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/que2_image_view"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/banana_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/banana"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/coconut_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coconut"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/grapes_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grapes"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/dividerColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/que3_text_view"
                style="@style/QuestionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3" />

            <CheckBox
                android:id="@+id/child_animals_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/que3_text_view"
                android:text="@string/child_animals"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/pet_animals_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/child_animals_checkbox"
                android:text="@string/pet_animals"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/wild_animals_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pet_animals_checkbox"
                android:text="@string/wild_animals"
                android:textAppearance="?android:textAppearanceMedium" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/dividerColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/que4_text_view"
                style="@style/QuestionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4" />

            <ImageView
                android:id="@+id/que4_image_view"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/que4_text_view"
                android:scaleType="fitCenter"
                android:src="@drawable/giraffe" />

            <CheckBox
                android:id="@+id/first_choice_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/que4_image_view"
                android:text="@string/four_legs"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/second_choice_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_choice_checkbox"
                android:text="@string/two_eyes"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/third_choice_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/second_choice_checkbox"
                android:text="@string/one_mouth"
                android:textAppearance="?android:textAppearanceMedium" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/dividerColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/que5_text_view"
                style="@style/QuestionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_5" />

            <ImageView
                android:id="@+id/que5_image_view"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/que5_text_view"
                android:scaleType="fitCenter"
                android:src="@drawable/pig" />

            <EditText
                android:id="@+id/answer_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/que5_image_view"
                android:hint="@string/enter_your_answer"
                android:inputType="text" />

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:onClick="calculateScore"
            android:text="@string/submit" />
    </LinearLayout>

</ScrollView>